--- a/packages/optimism.io/src/philosophy-section/Philosophy.module.css
+++ b/packages/optimism.io/src/philosophy-section/Philosophy.module.css
@@ -26,6 +26,7 @@
 	margin-top: -15rem;
 	margin-left: 30%;
 	margin-right: 30%;
+	padding-bottom: 2.5rem;
 	width: 40%;
 	background: white;
 	text-align: left;
