change header style for features section

--- a/packages/optimism.io/src/features-section/Features.module.css
+++ b/packages/optimism.io/src/features-section/Features.module.css
@@ -4,6 +4,7 @@
   letter-spacing: -0.7;
   font-weight: bold;
   font-style: italic;
+  line-height: 10px;
   text-decoration: #F01A37 underline;
   margin-bottom: 3rem;
 }
