FUCK CSS TABLES

--- a/packages/optimism.io/src/features-section/Features.module.css
+++ b/packages/optimism.io/src/features-section/Features.module.css
@@ -106,6 +106,10 @@ a:hover{
   font-size: 17px;
 }
 
+a:visited{
+  color:#F01A37;
+}
+
 @keyframes rainbow { 
   0%{background-position:left}
   50%{background-position:right}
