--- a/packages/optimism.io/src/roadmap-section/Roadmap.module.css
+++ b/packages/optimism.io/src/roadmap-section/Roadmap.module.css
@@ -13,3 +13,59 @@
   letter-spacing: -0.7;
   margin-top: 6rem;
 }
+
+.flexContainer {
+  padding: 0;
+  margin: 0;
+  -ms-box-orient: horizontal;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -moz-flex;
+  display: -webkit-flex;
+  display: flex;
+  justify-content: center;
+  flex-flow: row wrap;
+}
+
+.flexContainer p{
+	color: #F01A37;
+	margin-right: 3px;
+}
+
+table {
+	width: 655px;
+	border-collapse: collapse;
+}
+
+tr {
+	background-color: #F2F4F7;
+}
+
+.current {
+	background-color: white;
+	height: 65px;
+	border-left: 25px solid white;
+	border-right: 25px solid white;
+	box-shadow: -8px 8px 45px rgba(0,0,0,.18);
+}
+
+.new {
+	background-color: transparent;
+}
+
+td {
+	height: 50px;
+	padding-left: 10px;
+}
+
+td:nth-child(2) {
+	width: 20px;
+	color: #F01A37;
+}
+
+td:last-child {
+	padding-left: 10px;
+	text-align: left;
+}
+
