Rescue sad looking button and change quote to Justin

--- a/packages/optimism.io/src/demo-section/Demo.module.css
+++ b/packages/optimism.io/src/demo-section/Demo.module.css
@@ -96,7 +96,7 @@
 	padding-left: 60px;
 }
 
-button {
+.demoSection button {
 	height: 60px;
 	width: 250px;
 	color: white;
@@ -109,7 +109,7 @@ button {
 	margin: 30px;
 }
 
-button:hover{
+.demoSection button:hover{
   color: rgba(0,0,0,0);
   font-family: "Roboto";
   font-weight: bold;
@@ -123,7 +123,7 @@ button:hover{
   transition: color .2s ease-in-out;
 }
 
-button:visited{
+.demoSection button:visited{
   color:#F01A37;
 }
 
