--- a/packages/optimism.io/src/App.css
+++ b/packages/optimism.io/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap');
 .App {
   text-align: center;
 }
