--- a/packages/optimism.io/src/philosophy-section/Philosophy.module.css
+++ b/packages/optimism.io/src/philosophy-section/Philosophy.module.css
@@ -24,10 +24,10 @@
 .body {
 	position:relative;
 	margin-top: -15rem;
-	margin-left: 30%;
-	margin-right: 30%;
+	margin-left: auto;
+	margin-right: auto;
 	padding-bottom: 2.5rem;
-	width: 40%;
+	max-width: 1000px;
 	background: white;
 	text-align: left;
 }
@@ -40,6 +40,13 @@
 	padding-top: 5rem;
 	margin-left: 15%;
 	margin-right: 15%;
+  text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+  .body h1 {
+    text-align: left;
+  }
 }
 
 .body p {
@@ -51,10 +58,21 @@
 	margin-right: 15%;
 }
 
-.body img{
-	position: absolute;
-	margin-left: -6rem;
-	margin-top: -4rem;
+.body img {
 	height: 195px;
 	width: 160px;
+	margin: auto;
+	width: 100%;
+  position: absolute;
+  margin-top: -9rem;
+}
+
+@media screen and (min-width: 768px) {
+  .body img {
+  	position: absolute;
+  	margin-left: -6rem;
+  	margin-top: -4rem;
+  	height: 195px;
+  	width: 160px;
+  }
 }
