--- a/packages/optimism.io/src/quote-section/Quote.module.css
+++ b/packages/optimism.io/src/quote-section/Quote.module.css
@@ -1,7 +1,7 @@
 .quoteSection {
 	background: #1B1D29;
 	color: white;
-	height: 400px;
+
 }
 
 .quote {
@@ -18,6 +18,8 @@
 	font-family: "Roboto";
 	font-size: 24px;
 	font-weight: 400;
+	margin-left: 5%;
+	margin-right: 5%;
 }
 
 .flexContainer {
