--- a/packages/optimism.io/src/demo-section/Demo.module.css
+++ b/packages/optimism.io/src/demo-section/Demo.module.css
@@ -3,6 +3,11 @@
 	color: white;
 	padding-top: 150px;
 	padding-bottom: 100px;
+
+}
+
+.demoSection .header {
+	padding: 20px;
 }
 
 @media screen and (min-width: 768px) {
@@ -64,10 +69,11 @@
 }
 
 .demoCard {
-	max-width: 1100px;
+
 	display: inline-flex;
 	flex-flow: column nowrap;
 	margin-top: 50px;
+
 }
 
 .demoCard .flexDemoHeader {
@@ -75,22 +81,39 @@
 	background: #110C24;
 	flex-flow: row wrap;
 	justify-content: center;
-  width: 100vw;
-  max-width: 1100px;
+	width: 100vw;
+	max-width: 1100px;
 }
 
 .demoCard .flexDemoBody {
 	position: relative;
 	display: inline-flex;
 	background-color: white;
-	padding-bottom: 100px;
+	padding-bottom: 50px;
+	flex-flow: row wrap;
 }
 
-.flexItem {
+.flexItemLeft {
 	display: flex;
+	height: 220px;
 	margin-top: auto;
 	margin-bottom: auto;
 }
+
+.flexItemRight {
+	display: flex;
+	height: 220px;
+	margin-top: auto;
+	margin-bottom: auto;
+}
+
+@media screen and (min-width: 860px){
+	.flexItemRight {
+		margin-left: -70px;
+	}
+
+}
+
 
 .curveHighlight {
 	border-radius: 5px 70px 70px 5px;
