--- a/packages/optimism.io/src/hero-section/Hero.module.css
+++ b/packages/optimism.io/src/hero-section/Hero.module.css
@@ -1,17 +1,17 @@
 .hero {
 	background: white;
 	justify-content: center;
-	height: 700px
+	height: 85vh;
 }
 
-@media screen and (min-width: 1270px) {
+@media screen and (min-width: 1024px) {
   .hero .bg {
   	background-image: url("./hero.svg");
   	background-position: right bottom;
   	background-repeat: no-repeat;
   	height: 500px;
   	max-width: 100%;
-  	margin-top: -400px;
+  	margin-top: calc(85vh - 1000px);
   	overflow: hidden;
   }
 }
@@ -23,7 +23,6 @@
 	letter-spacing: -0.8px;
 	color: black;
 	margin-top: 80px;
-	margin-bottom: 20px;
 }
 
 .hero p {
