--- a/packages/optimism.io/src/hero-section/Hero.module.css
+++ b/packages/optimism.io/src/hero-section/Hero.module.css
@@ -1,9 +1,29 @@
 .hero {
 	background: white;
 	justify-content: center;
-	height: 85vh;
+	height: 680px;
   padding-left: 5px;
   padding-right: 5px;
+}
+
+@media screen and (min-height: 680px) {
+  .hero {
+  	background: white;
+  	justify-content: center;
+  	height: 85vh;
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+}
+
+@media screen and (min-height: 1000px) {
+  .hero {
+  	background: white;
+  	justify-content: center;
+  	height: 1000px;
+    padding-left: 5px;
+    padding-right: 5px;
+  }
 }
 
 @media screen and (min-width: 1024px) {
@@ -13,8 +33,17 @@
   	background-repeat: no-repeat;
   	height: 500px;
   	max-width: 100%;
-  	margin-top: calc(85vh - 1000px);
+  	margin-top: -300px;
   	overflow: hidden;
+  }
+  @media screen and (min-height: 680px) {
+  	margin-top: calc(85vh - 1000px);
+  }
+  @media screen and (min-height: 1000px) {
+    .hero .bg {
+    	margin-top: -500px;
+    	overflow: hidden;
+    }
   }
 }
 
@@ -59,11 +88,11 @@
 .roundButton {
 	height: 80px;
 	width: 80px;
-    line-height: 80px;
-    border-radius: 50%;
-    color: white;
-    text-align: center;
-    text-decoration: none;
+  line-height: 80px;
+  border-radius: 50%;
+  color: white;
+  text-align: center;
+  text-decoration: none;
 	background: #272934;
 	font-size: 20px;
 	font-weight: 900;
