--- a/packages/optimism.io/src/quote-section/Quote.module.css
+++ b/packages/optimism.io/src/quote-section/Quote.module.css
@@ -1,6 +1,7 @@
 .quoteSection {
 	background: #1B1D29;
 	color: white;
+    flex-flow: row;
 
 }
 
@@ -16,12 +17,19 @@
 	height: 40px;
 }
 
+.quotationMark {
+	position: absolute;
+	margin-top: -15rem;
+	margin-left: 10rem;
+}
+
 .quote h1 {
 	font-family: "Roboto";
 	font-size: 24px;
 	font-weight: 400;
 	margin-left: 10%;
 	margin-right: 10%;
+	margin-top: -200px;
 }
 
 .flexContainer {
@@ -46,9 +54,12 @@
 }
 
 .logo img{
-	position: absolute;
+	position: relative;
 	height: 200px;
 	width: 150px;
-	margin-left: 27rem;
+	margin-left: 15rem;
 	margin-top: -2.4rem;
+	overflow: hidden;
+	flex-flow: row wrap;
+	display: flex;
 }
