--- a/packages/optimism.io/src/demo-section/Demo.module.css
+++ b/packages/optimism.io/src/demo-section/Demo.module.css
@@ -121,8 +121,10 @@ a {
 
 .curveHighlight {
 	border-radius: 5px 70px 70px 5px;
+	border-style: hidden;
 	background: #EFF0F8;
-	width: 400px;
+	/* // TODO FIX ME v */
+	width: 100px; 
 	height: 130px;
 	margin-left: 0px;
 	color: red;
