--- a/packages/optimism.io/src/features-section/Features.module.css
+++ b/packages/optimism.io/src/features-section/Features.module.css
@@ -59,6 +59,7 @@
   margin-left: 1rem;
   text-align: left;
   min-width: 300px;
+  overflow: hidden;
 }
 .small {
   height: 320px;
@@ -70,6 +71,7 @@
   align-items: center;
   margin-left: auto;
   margin-right: auto;
+  overflow: hidden;
 }
 
 .flexItem h2{
@@ -84,6 +86,7 @@
   font-family: "Roboto Mono";
   font-size: 17px;
   line-height: 26px;
+  max-width: 100%;
 }
 
 .info {
