--- a/packages/optimism.io/src/quote-section/Quote.module.css
+++ b/packages/optimism.io/src/quote-section/Quote.module.css
@@ -15,12 +15,13 @@
 
 .quote img {
 	height: 40px;
+	
 }
 
 .quotationMark {
 	position: absolute;
-	margin-top: -15rem;
-	margin-left: 10rem;
+	margin-top: -11.75rem;
+	margin-left: 5%;
 }
 
 .quote h1 {
@@ -29,7 +30,7 @@
 	font-weight: 400;
 	margin-left: 10%;
 	margin-right: 10%;
-	margin-top: -200px;
+	margin-top: -150px;
 }
 
 .flexContainer {
@@ -56,7 +57,7 @@
 .logo img{
 	position: relative;
 	height: 200px;
-	width: 150px;
+	width: 130px;
 	margin-left: 15rem;
 	margin-top: -2.4rem;
 	overflow: hidden;
