--- a/packages/optimism.io/src/hero-section/Hero.module.css
+++ b/packages/optimism.io/src/hero-section/Hero.module.css
@@ -2,8 +2,8 @@
 	background: white;
 	justify-content: center;
 	height: 85vh;
-  padding-left: 5px;
-  padding-right: 5px;
+	padding-left: 5px;
+	padding-right: 5px;
 }
 
 @media screen and (min-width: 1024px) {
@@ -50,20 +50,26 @@
 }
 
 .transitionMessage {
-	display: inline-block;
+	display: none;
+}
+
+@media screen and (min-width: 1024px) {
+  .transitionMessage {
+  	display: inline-block;
 	margin-top: 100px;
 	margin-left: auto;
 	margin-right: auto;
+  }
 }
 
 .roundButton {
 	height: 80px;
 	width: 80px;
-  line-height: 80px;
-  border-radius: 50%;
-  color: white;
-  text-align: center;
-  text-decoration: none;
+	line-height: 80px;
+	border-radius: 50%;
+	color: white;
+	text-align: center;
+	text-decoration: none;
 	background: #272934;
 	font-size: 20px;
 	font-weight: 900;
