--- a/packages/optimism.io/src/demo-section/Demo.module.css
+++ b/packages/optimism.io/src/demo-section/Demo.module.css
@@ -1,6 +1,7 @@
 .demoSection {
 	background: #1B1D29;
 	color: white;
+	margin: auto;
 	padding-top: 75px;
 	padding-bottom: 100px;
 
@@ -109,13 +110,14 @@ a {
 	height: 220px;
 	margin-top: auto;
 	margin-bottom: auto;
+	margin-left: -70px;
 }
 
 .curveHighlight {
 	border-radius: 5px 70px 70px 5px;
 	background: #EFF0F8;
 	width: 300px; 
-	padding-right: 200px;
+	padding-right: 100px;
 	height: 130px;
 	margin-left: 0px;
 	color: red;
@@ -124,23 +126,9 @@ a {
 	padding-left: 60px;
 }
 
-@media screen and (min-width: 860px){
+@media screen and (max-width: 849px){
 	.flexItemRight {
-		margin-left: -70px;
-	}
-}
-
-@media screen and (max-width: 400px){
-	.curveHighlight {
-		border-radius: 5px 70px 70px 5px;
-		background: #EFF0F8;
-		width: 300px; 
-		padding-right: 0px;
-		height: 130px;
-		margin-left: 0px;
-		color: red;
-		text-align: left;
-		padding-left: 60px;
+		padding-left: 70px;
 	}
 }
 
