--- a/packages/optimism.io/src/components/gas-calc-section/GasCalc.module.css
+++ b/packages/optimism.io/src/components/gas-calc-section/GasCalc.module.css
@@ -47,3 +47,9 @@
   padding: 0.5em 0.75em;
   background: hsl(130, 75%, 75%); 
 }
+.active {
+  background: hsl(195, 100%, 50%); 
+}
+.disabled {
+    background: hsl(195, 0%, 50%); 
+}
