--- a/packages/optimism.io/src/components/gas-calc-section/GasCalc.module.css
+++ b/packages/optimism.io/src/components/gas-calc-section/GasCalc.module.css
@@ -3,7 +3,8 @@
   font-size: 24px;
   letter-spacing: -0.7;
   font-weight: bold;
-  margin-bottom: 24px;
+  margin-top: 100px;
+  line-height: 50px;
 }
 
 .heading p{
@@ -24,6 +25,7 @@
 .flexContainer {
   padding: 0;
   margin: 0;
+  background: white;
   -ms-box-orient: horizontal;
   display: -webkit-box;
   display: -moz-box;
@@ -39,6 +41,10 @@
   padding: 0;
   margin: 0;
   flex-flow: column nowrap;
+  display: flex;
+}
+
+.flexItem {
   display: flex;
 }
 
@@ -72,6 +78,7 @@
   display: flex;
   background: pink;
   max-height: 155px;
+  min-height: 155px;
   width: 328px;
 }
 
@@ -90,28 +97,50 @@
 
 .form {
   display: flex; 
-  grid-column: 2;
   margin-bottom: 40px;
+  flex-flow: column;
   
 }
 
 .input {
-  flex-grow: 1;
-  padding: 0.5em 0.75em;
-  max-width: 530px;
+  font-family: "Roboto Mono";
+  font-size: 14px;
+  width: 100%;
+  background: #DFE1F1;
+  height: 50px;
+  margin-top: 10px;
+  border: hidden;
+  border-bottom: 1px solid #334659;
 }
 
-.button {
-  padding: 0.5em 0.75em;
+.test {
+  background: pink;
+}
+
+.btnSolid {
+  padding: 8px;
   color: white;
-  background: black;
+  background: #F01A37;
   font-family: "Roboto";
   font-weight: bold;
+  width: 100%;
   font-size: 14px;
+  border:none;
 }
-.active {
-  background: #F01A37; 
+
+.btnSolid:active {
+  background: black; 
 }
-.disabled {
-    background: hsl(195, 0%, 50%); 
+
+.btnOutline {
+  padding: 8px;
+  color: black;
+  background: white;
+  font-family: "Roboto";
+  font-weight: bold;
+  width: 100%;
+  font-size: 14px;
+  border: 1px solid black;
 }
+
+
