--- a/packages/optimism.io/src/components/demo-section/Demo.module.css
+++ b/packages/optimism.io/src/components/demo-section/Demo.module.css
@@ -44,7 +44,7 @@ a {
 
 .demoSection h3 {
 	font-family: "Roboto";
-	font-size: 24px;
+	font-size: 20px;
 	color: black;
 	font-weight: normal;
 	margin-top: 10px;
@@ -150,6 +150,7 @@ a {
 	font-size: 17px;
 	text-transform: uppercase;
 	margin: 30px;
+	border: none;
 }
 
 .demoSection button:hover{
