--- a/packages/optimism.io/src/components/gas-calc-section/GasCalc.module.css
+++ b/packages/optimism.io/src/components/gas-calc-section/GasCalc.module.css
@@ -56,10 +56,11 @@
   flex-flow: column nowrap;
   display: flex;
   background: #EFF0F8;
-  min-height: 70px;
-  max-height: 70px;
-  width: 200px;
+  min-height: 60px;
+  max-height: 60px;
+  width: 150px;
   margin: auto;
+  font-size: 14px;
 }
 
 .flexOutputGas .result{
@@ -71,7 +72,7 @@
 
 .flexOutputGas .description{
   font-family: "Roboto Mono";
-  font-size: 14px;
+  font-size: 12px;
   font-weight: thin;
 }
 
@@ -81,22 +82,47 @@
   flex-flow: column nowrap;
   display: flex;
   background: pink;
-  max-height: 155px;
-  min-height: 155px;
-  width: 328px;
+  width: 155px;
 }
 
 .flexOutputDelta .result {
   font-family: "Roboto";
   font-weight: bold;
-  font-size: 58px;
+  font-size: 48px;
   margin-top: 30px;
 }
 
 .flexOutputDelta .description {
   font-family: "Roboto Mono";
-  font-size: 14px;
+  font-size: 12px;
   font-weight: thin;
+}
+
+@media screen and (min-width: 768px) {
+  .flexOutputGas {
+    min-height: 70px;
+    max-height: 70px;
+    width: 200px;
+  }
+
+  .flexOutputGas .description {
+    font-size: 14px;
+  }
+
+  .flexOutputDelta {
+    max-height: 155px;
+    min-height: 155px;
+    width: 328px;
+  }
+
+  .flexOutputDelta .result {
+    font-size: 58px;
+  }
+
+  .flexOutputDelta .description {
+    font-size: 14px;
+  }
+
 }
 
 .form {
@@ -116,20 +142,16 @@
   border: hidden;
 }
 
-.test {
-  background: pink;
-}
-
 .presets button {
   border: none;
 
 }
 
-.presets img {
-  border-radius: 50%;
+.presets input {
   height: 50px;
   box-shadow: -8px 8px 10px 0px #EEE3E3;
   margin: 10px;
+  border-radius: 50%;
 }
 
 .btnSolid {
@@ -139,7 +161,7 @@
   font-family: "Roboto";
   font-weight: bold;
   font-size: 17px;
-  letter-spacing: 0.7 px;
+  letter-spacing: 0.7px;
   width: 100%;
   height: 50px;
   border:none;
