--- a/packages/optimism.io/src/components/gas-calc-section/GasCalc.module.css
+++ b/packages/optimism.io/src/components/gas-calc-section/GasCalc.module.css
@@ -13,6 +13,13 @@
   margin: 20px;
 }
 
+.heading img {
+  position: absolute;
+  margin-left: -480px;
+  margin-top: -100px;
+  height: 200px;
+}
+
 .calculator {
   margin: auto;
   margin-bottom: 50px;
