Refactors from CSS to SCSS

--- a/packages/optimism.io/src/navigation/Navigation.module.scss
+++ b/packages/optimism.io/src/navigation/Navigation.module.scss
@@ -84,12 +84,12 @@
 @media (min-width: 900px) {
 	.desktopNav {
 		display: flex;
+		align-items: center;
 		flex-flow: row nowrap;
 		justify-content: space-around;
 	}
 
-	.desktopNav li {
+	.navItem {
 		padding: 10px;
-		margin-top: 10px;
 	}
 }
