--- a/packages/optimism.io/src/components/gas-calc-section/GasCalc.module.scss
+++ b/packages/optimism.io/src/components/gas-calc-section/GasCalc.module.scss
@@ -1,13 +1,13 @@
-.heading h1{
-  font-family: "Roboto";
+@import "../../styles/variables";
+
+.heading h1 {
   font-size: 24px;
   letter-spacing: -0.7;
   font-weight: bold;
   margin: 10px;
 }
 
-.heading p{
-  font-family: "Roboto";
+.heading p {
   font-size: 14px;
   letter-spacing: -0.7;
   margin: 20px;
@@ -26,9 +26,9 @@
   background: white;
   width: 340px;
   padding: 20px;
-  box-shadow: -8px 8px 20px 0px #EDEDED;
+  box-shadow: -8px 8px 20px 0px #ededed;
   justify-content: center;
-  font-family: "Roboto";
+
   font-size: 20px;
   font-weight: bold;
 }
@@ -62,7 +62,7 @@
 .flexOutputGas {
   flex-flow: column nowrap;
   display: flex;
-  background: #EFF0F8;
+  background: #eff0f8;
   min-height: 60px;
   max-height: 60px;
   width: 150px;
@@ -70,15 +70,14 @@
   font-size: 14px;
 }
 
-.flexOutputGas .result{
-  font-family: "Roboto";
+.flexOutputGas .result {
   font-weight: bold;
   font-size: 20px;
   line-height: 40px;
 }
 
-.flexOutputGas .description{
-  font-family: "Roboto Mono";
+.flexOutputGas .description {
+  font-family: $fontSecondary;
   font-size: 12px;
   font-weight: thin;
 }
@@ -93,14 +92,13 @@
 }
 
 .flexOutputDelta .result {
-  font-family: "Roboto";
   font-weight: bold;
   font-size: 48px;
   margin-top: 30px;
 }
 
 .flexOutputDelta .description {
-  font-family: "Roboto Mono";
+  font-family: $fontSecondary;
   font-size: 12px;
   font-weight: thin;
 }
@@ -129,21 +127,19 @@
   .flexOutputDelta .description {
     font-size: 14px;
   }
-
 }
 
 .form {
-  display: flex; 
+  display: flex;
   margin-bottom: 40px;
   flex-flow: column;
-  
 }
 
 .input {
-  font-family: "Roboto Mono";
+  font-family: $fontSecondary;
   font-size: 14px;
   padding-left: 24px;
-  background: #DFE1F1;
+  background: #dfe1f1;
   height: 50px;
   margin-top: 10px;
   border: hidden;
@@ -151,12 +147,11 @@
 
 .presets button {
   border: none;
-
 }
 
 .presets input {
   height: 50px;
-  box-shadow: -8px 8px 10px 0px #EEE3E3;
+  box-shadow: -8px 8px 10px 0px #eee3e3;
   margin: 10px;
   border-radius: 50%;
 }
@@ -164,14 +159,14 @@
 .btnSolid {
   padding: 8px;
   color: white;
-  background: #F01A37;
-  font-family: "Roboto";
+  background: $brandColor;
+
   font-weight: bold;
   font-size: 17px;
   letter-spacing: 0.7px;
   width: 100%;
   height: 50px;
-  border:none;
+  border: none;
   margin-top: 12px;
 }
 
@@ -183,7 +178,7 @@
   padding: 8px;
   color: #334659;
   background: #e5e5e5;
-  font-family: "Roboto";
+  
   font-weight: bold;
   width: 100%;
   font-size: 14px;
@@ -196,12 +191,9 @@
   }
 
   .form {
-
   }
 
   .input {
     border-bottom: 1px solid #334659;
   }
 }
-
-
