--- a/packages/optimism.io/src/components/philosophy-section/Philosophy.module.scss
+++ b/packages/optimism.io/src/components/philosophy-section/Philosophy.module.scss
@@ -1,3 +1,5 @@
+@import "../../styles/variables.scss";
+
 .flexContainer {
   padding: 0;
   margin: 0;
@@ -13,35 +15,34 @@
 }
 
 .header {
-	position: relative;
-	height: 200px;
-	padding-top: 200px;
-	width: 100%;
-	background-image: url("nyancat.png");
-	margin-top: 50px;
-	margin-right: 0px;
-	background-position: top bottom;
+  position: relative;
+  height: 200px;
+  padding-top: 200px;
+  width: 100%;
+  background-image: url("nyancat.png");
+  margin-top: 50px;
+  margin-right: 0px;
+  background-position: top bottom;
 }
 
 .body {
-	position:relative;
-	margin-top: -15rem;
-	margin-left: auto;
-	margin-right: auto;
-	padding-bottom: 2.5rem;
-	max-width: 1000px;
-	background: white;
-	text-align: left;
+  position: relative;
+  margin-top: -15rem;
+  margin-left: auto;
+  margin-right: auto;
+  padding-bottom: 2.5rem;
+  max-width: 1000px;
+  background: white;
+  text-align: left;
 }
 
 .body h1 {
-	font-family: "Roboto";
-	font-size: 48px;
-	font-weight: bold;
-	line-height: 50px;
-	padding-top: 5rem;
-	margin-left: 15%;
-	margin-right: 15%;
+  font-size: 48px;
+  font-weight: bold;
+  line-height: 50px;
+  padding-top: 5rem;
+  margin-left: 15%;
+  margin-right: 15%;
   text-align: center;
 }
 
@@ -52,19 +53,19 @@
 }
 
 .body p {
-	font-family: "Roboto Mono";
-	font-size: 17px;
-	letter-spacing: -0.5px;
-	line-height: 30px;
-	margin-left: 15%;
-	margin-right: 15%;
+  font-family: $fontSecondary;
+  font-size: 17px;
+  letter-spacing: -0.5px;
+  line-height: 30px;
+  margin-left: 15%;
+  margin-right: 15%;
 }
 
 .body img {
-	height: 195px;
-	width: 160px;
-	margin: auto;
-	width: 100%;
+  height: 195px;
+  width: 160px;
+  margin: auto;
+  width: 100%;
   position: absolute;
   margin-top: -9rem;
   background-position: center;
@@ -72,22 +73,10 @@
 
 @media screen and (min-width: 768px) {
   .body img {
-  	position: absolute;
-  	margin-left: -6rem;
-  	margin-top: -4rem;
-  	height: 195px;
-	width: 160px;
+    position: absolute;
+    margin-left: -6rem;
+    margin-top: -4rem;
+    height: 195px;
+    width: 160px;
   }
 }
-
-/* @media screen and (min-width: 1024px) {
-	.body .bg {
-		background-image: url("./nyancat.png");
-		background-position: right bottom;
-		background-repeat: no-repeat;
-		height: 500px;
-		max-width: 100%;
-		margin-top: calc(85vh - 1000px);
-		overflow: hidden;
-	}
-} */
