--- a/packages/optimism.io/src/components/team-section/Team.module.scss
+++ b/packages/optimism.io/src/components/team-section/Team.module.scss
@@ -1,3 +1,5 @@
+@import "../../styles/variables.scss";
+
 .flexContainer {
   padding: 0;
   margin: 0;
@@ -37,7 +39,7 @@
 }
 
 .card {
-  font-family: "Roboto Mono";
+  font-family: $fontSecondary;
   padding: 5px;
   width: 190px;
   height: 220px;
