--- a/packages/optimism.io/src/styles/index.scss
+++ b/packages/optimism.io/src/styles/index.scss
@@ -1,4 +1,4 @@
-@import "./variables.scss";
+@import "./global.module.scss";
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&display=swap");
