--- a/packages/optimism.io/src/styles/global.module.scss
+++ b/packages/optimism.io/src/styles/global.module.scss
@@ -1,14 +1,7 @@
 $brandColor: #f01a37;
 
-$fontPrimary: "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-$fontSecondary: "Roboto Mono", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-$fontSerif: "Cormorant Garamond", serif;
-
-.pageHeader {
-  font-size: 72px;
-  text-align: center;
-  padding-top: 50px;
-  padding-bottom: 80px;
-  margin: auto;
-  border-bottom: 2px solid #e5e5e5;
-}
+$fontPrimary: 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
+  'Droid Sans', 'Helvetica Neue', sans-serif;
+$fontSecondary: 'Roboto Mono', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
+  'Droid Sans', 'Helvetica Neue', sans-serif;
+$fontSerif: 'Cormorant Garamond', serif;
