--- a/packages/optimism.io/src/components/Footer/Footer.module.scss
+++ b/packages/optimism.io/src/components/Footer/Footer.module.scss
@@ -1,19 +1,19 @@
-@import "../../styles/global.module";
+@import '../../styles/global.module';
 
-footer {
+.footer {
   background-color: white;
   color: $brandColor;
   margin-top: 250px;
 }
 
-footer h1 {
+.footer h1 {
   font-size: 32px;
   font-style: italic;
   font-weight: bold;
   text-transform: uppercase;
 }
 
-footer li {
+.footer li {
   color: black;
   font-family: $fontSecondary;
   list-style-type: none;
