--- a/packages/optimism.io/src/components/navigation/Navigation.module.scss
+++ b/packages/optimism.io/src/components/navigation/Navigation.module.scss
@@ -1,26 +1,15 @@
 @import '../../styles/global.module';
 
 .burger {
-  z-index: 2;
+  z-index: 2000;
   position: relative;
-  display: block;
   outline: none;
-  display: flex;
+  display: flex !important;
   align-items: center !important;
-  padding: 8px 10px !important;
+  padding: 0 !important;
 }
 
 .burger div {
-  width: 40px;
-  height: 40px;
-}
-
-/* ================================= 
-  Media Queries
-==================================== */
-
-@media (min-width: 900px) {
-  .burger {
-    display: none !important;
-  }
+  width: 30px;
+  height: 30px;
 }
