Rainbow link color effect

--- a/packages/optimism.io/src/components/Footer/Footer.module.scss
+++ b/packages/optimism.io/src/components/Footer/Footer.module.scss
@@ -1,8 +1,6 @@
-@import '../../styles/global.module';
-
 .footer {
   background-color: white;
-  color: $brandColor;
+  color: #f01a37;
   margin-top: 250px;
 }
 
@@ -15,7 +13,6 @@
 
 .footer li {
   color: black;
-  font-family: $fontSecondary;
   list-style-type: none;
   padding: 20px;
   border-bottom: 1px solid #e5e5e5;
@@ -44,7 +41,6 @@
   text-align: left;
   line-height: 80px;
   color: white;
-  font-family: $fontSecondary;
 }
 
 .flexItem {
@@ -57,36 +53,18 @@
 .flexContainer a:link {
   color: black;
   letter-spacing: 1px;
-  font-family: $fontSecondary;
+
   font-size: 17px;
   text-decoration: none;
-  background: linear-gradient(to right, crimson, pink, springgreen);
-  background-size: 200% 200%;
-  animation: rainbow 2s ease-in-out infinite;
-  background-clip: text;
-  -webkit-background-clip: text;
   display: block;
   transition: color 0.2s ease-in-out;
 }
 
 .flexContainer a:hover {
   color: rgba(0, 0, 0, 0);
-  font-weight: bold;
   font-size: 17px;
 }
 
 .flexContainer a:visited {
   color: black;
-}
-
-@keyframes rainbow {
-  0% {
-    background-position: left;
-  }
-  50% {
-    background-position: right;
-  }
-  100% {
-    background-position: left;
-  }
 }
