--- a/packages/optimism.io/src/components/RoadmapSection/Roadmap.module.scss
+++ b/packages/optimism.io/src/components/RoadmapSection/Roadmap.module.scss
@@ -1,5 +1,3 @@
-@import "../../styles/global.module";
-
 .heading h1 {
   font-size: 48px;
   letter-spacing: -0.7;
@@ -29,7 +27,7 @@
 }
 
 .flexContainer p {
-  color: $brandColor;
+  color: #f01a37;
   margin-right: 3px;
 }
 
@@ -61,7 +59,7 @@ td {
 
 td:nth-child(2) {
   width: 20px;
-  color: $brandColor;
+  color: #f01a37;
 }
 
 td:last-child {
