--- a/packages/optimism.io/src/styles/index.scss
+++ b/packages/optimism.io/src/styles/index.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500;700&display=swap');
 
@@ -15,7 +15,6 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  text-align: center;
 }
 
 body:not(.user-is-tabbing) button:focus,
@@ -50,7 +49,7 @@ a {
   animation: rainbow 3s ease infinite;
   background-clip: text;
   -webkit-background-clip: text;
-  transition: color 0.3s ease-in-out !important;
+  transition: all 0.3s ease-in-out !important;
 }
 
 a:hover {
